--- a/public/index.html
+++ b/public/index.html
@@ -279,7 +279,7 @@
 
                 <li class="nav-item d-flex align-items-center ">
 
-                  <a href="#searchBox" id="menu_search_form_btn" role="button" class="nav-link text-uppercase h-search-button" data-toggle="collapse">
+                  <a href="#searchBox" id="menu_search_form_btn" role="button" class="nav-link text-uppercase h-search-button open" data-toggle="collapse">
 
                     <svg id="to_open" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="38.9px" height="39.2px" viewBox="0 0 38.9 39.2" style="enable-background:new 0 0 38.9 39.2;" xml:space="preserve"><path class="st0" d="M28.8,27.1c2.6-3,4-6.8,4-10.7C32.8,7.3,25.4,0,16.4,0C7.3,0,0,7.4,0,16.4c0,9.1,7.4,16.4,16.4,16.4 c3.9,0,7.7-1.4,10.7-3.9l10,10.3l1.8-1.8L28.8,27.1z M30.2,16.4c0,7.7-6.2,13.9-13.9,13.9S2.5,24.1,2.5,16.4S8.7,2.5,16.4,2.5 S30.2,8.8,30.2,16.4z"></path></svg>
 
