--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-      <link rel="stylesheet" href="./dist/css/app.css?=1.4">
-      <link rel="stylesheet" href="./dist/css/theme.css?=1.0">
-
-      <link rel="stylesheet" href="./dist/css/semantic.css?=1.0">
+      <link rel="stylesheet" href="./dist/css/app2.css?=1.4">
+      <link rel="stylesheet" href="./dist/css/theme2.css?=1.0">
+      <link rel="stylesheet" href="./dist/css/semantic2.css?=1.0">
       <link rel="stylesheet" href="./dan.css">
 
       <!--
@@ -39,7 +38,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div class="hero-empty"></div>
+    <div class="hero-empty" id="main_app_hero_empty_34t54gy54"></div>
+
+
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
